# codem

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  _build-log.txt  _dev-log.txt  _release-notes.md  build-server.mjs  check-claude.cjs  check-messages.mjs  index.html  notebook-section.txt  package-lock.json  package.json  release-notes.md  server.ts  test-all.ts  test-login.ts  test-migration.ts  test-results.json  test-spawn.ts  test-spawn2.ts  test-spawn3.ts  test-subagent.ts  test-ws.ts  vite.config.ts  vitest.config.ts
docs/: 1.html  2.html  AUDIT-V3-FINAL.md  AUDIT-WORKTREE-PARALLEL.md  CHANGELOG-v0.70.md  CHANGELOG-v0.80.md  CHANGELOG-v0.86.md  CHANGELOG-v0.87.md  CHANGELOG-v0.88.md  DEFERRED-WORKTREE-ANALYSIS.md  DEV-PLAN-UNIFIED.md  DISPLAY-MODE-PROGRESS.md  GIT-WORKTREE-GUIDE.md  MANUAL-TEST-GUIDE.md  PROJECT-CONTEXT.md  PROJECT-GUIDE.md  PROJECT_STATUS.md  REFACTOR-PROMPT-TO-DATA.md  REGRESSION-TEST-CASES.md  ROADMAP-codex-alignment.md  SKIN-SYSTEM-DESIGN.md  TEST-RESULTS.md  TODO.md  TOOLS-SKILLS-BENCHMARK.md  UI-UX-Wegent-Benchmark.md  WORKTREE-INPUTBAR-PLAN.md  def bet.html  dream-skin-reference.css
example-config/: auth.json
src/: App.tsx  main.tsx  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  chart.py  tauri.conf.json  医疗AI提示词.md  超级提示词-多模态文档结构化提取.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AgentDetail.tsx  AgentPanel.tsx  BootstrapWizard.tsx  ChatPanel.tsx  CloseConfirmDialog.tsx  ConfigEditor.tsx  ConfirmDialog.tsx  DiffViewer.tsx  (+38 more)
tests/: subagent.test.ts
(+163 files in other folders)
