[package]
name = "codem"
version = "0.80.1"
description = "Codem - AI Coding Assistant"
authors = ["Codem"]
edition = "2021"

[lib]
name = "codem_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
hostname = "0.3"
window-vibrancy = "0.6"
rfd = "0.15"
open = "5"
base64 = "0.22"
